--- a/blox/resume-biography-3-flex.html
+++ b/blox/resume-biography-3-flex.html
@@ -121,10 +121,10 @@
 
 
 
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-between mt-6 dark:text-gray-300">
+  <div class="flex flex-col md:flex-row justify-between mt-6 dark:text-gray-300">
 
     {{ with $person.interests }}
-    <div class="">
+    <div class="mb-8 md:mb-0">
       <div class="section-subheading mb-3">{{ i18n "interests" | markdownify }}</div>
       <ul class="list-disc list-inside space-y-1 pl-5">
         {{ range . }}
